...
    tools:context="de.muensterinside.mobile.ShowCommentActivity">

    <!-- Alle Kommentare einer Location Liste -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentList"
        android:choiceMode="singleChoice"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

