...


    <!-- Liste der Kategorien -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryList"
        android:choiceMode="singleChoice"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!-- Erstellen einer Kategorie -->
    <Button
...
